# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "slint-material"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license = "GPL-3.0-only OR LicenseRef-Slint-Royalty-free-2.0 OR LicenseRef-Slint-Software-3.0"
description = "Material Design 3 component set for Slint"
version.workspace = true
homepage = "https://slint.rs"
rust-version.workspace = true
