# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "printerdemo_mcu"
version = "1.11.0"
authors = ["Slint Developers <info@slint.dev>"]
edition = "2021"
build = "build.rs"
publish = false
license = "MIT"

[[bin]]
path = "main.rs"
name = "printerdemo_mcu"

[features]
simulator = ["slint/renderer-software", "slint/backend-winit", "slint/std"]
default = ["simulator"]

[dependencies]
slint = { path = "../../api/rs/slint", default-features = false, features = ["compat-1-2"] }
mcu-board-support = { path = "../../examples/mcu-board-support" }

[build-dependencies]
slint-build = { path = "../../api/rs/build" }

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "bench"
path = "bench.rs"
harness = false
